tests/bad/value_enums/constructor_missing_args.oc
/// fail: Missing required field 1 of type i32

enum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Case1("hello")
}